<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/nome_text"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/entra_valor_contagem"
            android:inputType="number"
            android:hint="Pontuacão"/>

    </android.support.design.widget.TextInputLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:id="@+id/lista_contador"
        android:focusable="true"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:id="@+id/soma"/>

    <Button
        android:layout_width="wrap_content"
        android:text="Adicionar"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/botao_adicionar"/>

</LinearLayout>